SERVER-42027 distinct and explain are not handled correctly in the shell

GitOrigin-RevId: c47b2e1d1517f96e4ce2da4f52053c176a310b43